Change log of the development of SOMA.
Please add your contributions.

	v0.6.0 not-yet-released

	* A second option for independent
	  sets calculation FIXED-N-SETS
	  (suitable for networks)       Gaoyuan Wang
	* The option to calculated the
	  bond energy and bond force with
	  minmum image convention is
	  added                         Gaoyuan Wang
	  (MIC needs to be compiled and
	  runned with MIC flag)
	* Separation of ConfGen and     Gaoyuan Wang
	  AnaGen
	v0.5.2 not-yet-released

	*

	v0.5.1 released 12/12/17

	* Minor Typo in README		Ludwig Schneider
	* Adding contribution guideline Ludwig Schneider
	* BUGFIX: correct OpenACC
	  pragma for SET iteration
	  for better performance	Ludwig Schneider
	* FIX documentation issues	Ludwig Schneider

	v0.5.0 released 11/9/17
	* first public version		Ludwig Schneider