@@ -359,7 +359,7 @@ int write_hdf5(const hsize_t ndims,const hsize_t*const dims,const hid_t file_id,
 int write_config_hdf5(const struct Phase * const p, const char *filename)
     {
     // Copy polymer data from device to host
-    update_self_phase(p);
+      update_self_phase(p,0);
 
     herr_t status;
 
